syntax = "proto3";

package calculatorpb;
option go_package = "calculatorpb";

service Calculator{
    rpc Sum(SumRequest) returns (SumResponse){};
}

message SumRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse{
    int32 result = 1;
}
